syntax/g4tool/.antlr/AuditGenParser.java
// Generated from /home/jona/myGit/gen_code_for_audit/syntax/g4tool/AuditGenParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AuditGenParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GEN_LEXER=1, GEN_GRAMMAR=2, GEN_PARSER=3, GEN_EOF=4, GEN_OPTIONS=5, GEN_IMPORT=6, 
		COMMA=7, COLON=8, COLON_COLON=9, STAR=10, PLUS=11, QUESTION=12, LPAREN=13, 
		RPAREN=14, AT_SIGN=15, DOT=16, BAR=17, SEMICOLON=18, EQUAL=19, LBRACE=20, 
		RBRACE=21, POUND=22, IDENTIFIER=23, UNSIGNED_INTEGER=24, DQUOTA_STRING=25, 
		SQUOTA_STRING=26, WHITESPACE=27, BLOCK_COMMENT=28, LINE_COMMENT=29;
	public static final int
		RULE_multi_stmts = 0, RULE_stmt = 1, RULE_header_stmt = 2, RULE_parser_lexer_name = 3, 
		RULE_import_stmt = 4, RULE_identifier = 5, RULE_cfg_rule_stmt = 6, RULE_rule_name = 7, 
		RULE_label_name = 8, RULE_cfg_rule = 9, RULE_alternative = 10, RULE_rule_component = 11, 
		RULE_closure_sign = 12, RULE_label_def = 13, RULE_label_element = 14, 
		RULE_atom = 15, RULE_block = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"multi_stmts", "stmt", "header_stmt", "parser_lexer_name", "import_stmt", 
			"identifier", "cfg_rule_stmt", "rule_name", "label_name", "cfg_rule", 
			"alternative", "rule_component", "closure_sign", "label_def", "label_element", 
			"atom", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'lexer'", "'grammar'", "'parser'", "'EOF'", "'options'", "'import'", 
			"','", "':'", "'::'", "'*'", "'+'", "'?'", "'('", "')'", "'@'", "'.'", 
			"'|'", "';'", "'='", "'{'", "'}'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "GEN_LEXER", "GEN_GRAMMAR", "GEN_PARSER", "GEN_EOF", "GEN_OPTIONS", 
			"GEN_IMPORT", "COMMA", "COLON", "COLON_COLON", "STAR", "PLUS", "QUESTION", 
			"LPAREN", "RPAREN", "AT_SIGN", "DOT", "BAR", "SEMICOLON", "EQUAL", "LBRACE", 
			"RBRACE", "POUND", "IDENTIFIER", "UNSIGNED_INTEGER", "DQUOTA_STRING", 
			"SQUOTA_STRING", "WHITESPACE", "BLOCK_COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AuditGenParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AuditGenParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Multi_stmtsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AuditGenParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public Multi_stmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multi_stmts; }
	}

	public final Multi_stmtsContext multi_stmts() throws RecognitionException {
		Multi_stmtsContext _localctx = new Multi_stmtsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_multi_stmts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(34);
				stmt();
				}
				}
				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GEN_LEXER) | (1L << GEN_GRAMMAR) | (1L << GEN_PARSER) | (1L << GEN_IMPORT) | (1L << IDENTIFIER) | (1L << DQUOTA_STRING) | (1L << SQUOTA_STRING))) != 0) );
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Header_stmtContext header_stmt() {
			return getRuleContext(Header_stmtContext.class,0);
		}
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public Cfg_rule_stmtContext cfg_rule_stmt() {
			return getRuleContext(Cfg_rule_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GEN_LEXER:
			case GEN_GRAMMAR:
			case GEN_PARSER:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				header_stmt();
				}
				break;
			case GEN_IMPORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				import_stmt();
				}
				break;
			case IDENTIFIER:
			case DQUOTA_STRING:
			case SQUOTA_STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				cfg_rule_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_stmtContext extends ParserRuleContext {
		public TerminalNode GEN_GRAMMAR() { return getToken(AuditGenParser.GEN_GRAMMAR, 0); }
		public Parser_lexer_nameContext parser_lexer_name() {
			return getRuleContext(Parser_lexer_nameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(AuditGenParser.SEMICOLON, 0); }
		public TerminalNode GEN_PARSER() { return getToken(AuditGenParser.GEN_PARSER, 0); }
		public TerminalNode GEN_LEXER() { return getToken(AuditGenParser.GEN_LEXER, 0); }
		public Header_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_stmt; }
	}

	public final Header_stmtContext header_stmt() throws RecognitionException {
		Header_stmtContext _localctx = new Header_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GEN_LEXER || _la==GEN_PARSER) {
				{
				setState(46);
				_la = _input.LA(1);
				if ( !(_la==GEN_LEXER || _la==GEN_PARSER) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(49);
			match(GEN_GRAMMAR);
			setState(50);
			parser_lexer_name();
			setState(51);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parser_lexer_nameContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Parser_lexer_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parser_lexer_name; }
	}

	public final Parser_lexer_nameContext parser_lexer_name() throws RecognitionException {
		Parser_lexer_nameContext _localctx = new Parser_lexer_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parser_lexer_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_stmtContext extends ParserRuleContext {
		public TerminalNode GEN_IMPORT() { return getToken(AuditGenParser.GEN_IMPORT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(AuditGenParser.SEMICOLON, 0); }
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_import_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(GEN_IMPORT);
			setState(56);
			identifier();
			setState(57);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AuditGenParser.IDENTIFIER, 0); }
		public TerminalNode SQUOTA_STRING() { return getToken(AuditGenParser.SQUOTA_STRING, 0); }
		public TerminalNode DQUOTA_STRING() { return getToken(AuditGenParser.DQUOTA_STRING, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENTIFIER) | (1L << DQUOTA_STRING) | (1L << SQUOTA_STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cfg_rule_stmtContext extends ParserRuleContext {
		public Rule_nameContext rule_name() {
			return getRuleContext(Rule_nameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(AuditGenParser.COLON, 0); }
		public List<Cfg_ruleContext> cfg_rule() {
			return getRuleContexts(Cfg_ruleContext.class);
		}
		public Cfg_ruleContext cfg_rule(int i) {
			return getRuleContext(Cfg_ruleContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(AuditGenParser.SEMICOLON, 0); }
		public List<TerminalNode> BAR() { return getTokens(AuditGenParser.BAR); }
		public TerminalNode BAR(int i) {
			return getToken(AuditGenParser.BAR, i);
		}
		public TerminalNode GEN_EOF() { return getToken(AuditGenParser.GEN_EOF, 0); }
		public Cfg_rule_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cfg_rule_stmt; }
	}

	public final Cfg_rule_stmtContext cfg_rule_stmt() throws RecognitionException {
		Cfg_rule_stmtContext _localctx = new Cfg_rule_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cfg_rule_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			rule_name();
			setState(62);
			match(COLON);
			setState(63);
			cfg_rule();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BAR) {
				{
				{
				setState(64);
				match(BAR);
				setState(65);
				cfg_rule();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GEN_EOF) {
				{
				setState(71);
				match(GEN_EOF);
				}
			}

			setState(74);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_nameContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Rule_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_name; }
	}

	public final Rule_nameContext rule_name() throws RecognitionException {
		Rule_nameContext _localctx = new Rule_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rule_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_nameContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Label_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_name; }
	}

	public final Label_nameContext label_name() throws RecognitionException {
		Label_nameContext _localctx = new Label_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_label_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cfg_ruleContext extends ParserRuleContext {
		public AlternativeContext alternative() {
			return getRuleContext(AlternativeContext.class,0);
		}
		public Label_defContext label_def() {
			return getRuleContext(Label_defContext.class,0);
		}
		public Cfg_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cfg_rule; }
	}

	public final Cfg_ruleContext cfg_rule() throws RecognitionException {
		Cfg_ruleContext _localctx = new Cfg_ruleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cfg_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			alternative();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POUND) {
				{
				setState(81);
				label_def();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativeContext extends ParserRuleContext {
		public List<Rule_componentContext> rule_component() {
			return getRuleContexts(Rule_componentContext.class);
		}
		public Rule_componentContext rule_component(int i) {
			return getRuleContext(Rule_componentContext.class,i);
		}
		public List<TerminalNode> GEN_EOF() { return getTokens(AuditGenParser.GEN_EOF); }
		public TerminalNode GEN_EOF(int i) {
			return getToken(AuditGenParser.GEN_EOF, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(AuditGenParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(AuditGenParser.SEMICOLON, i);
		}
		public AlternativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternative; }
	}

	public final AlternativeContext alternative() throws RecognitionException {
		AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_alternative);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(87); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(87);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case LPAREN:
					case IDENTIFIER:
					case DQUOTA_STRING:
					case SQUOTA_STRING:
						{
						setState(84);
						rule_component();
						}
						break;
					case GEN_EOF:
						{
						setState(85);
						match(GEN_EOF);
						}
						break;
					case SEMICOLON:
						{
						setState(86);
						match(SEMICOLON);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(89); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_componentContext extends ParserRuleContext {
		public Rule_componentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_component; }
	 
		public Rule_componentContext() { }
		public void copyFrom(Rule_componentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Atom_componentContext extends Rule_componentContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Atom_componentContext(Rule_componentContext ctx) { copyFrom(ctx); }
	}
	public static class Block_componentContext extends Rule_componentContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Block_componentContext(Rule_componentContext ctx) { copyFrom(ctx); }
	}
	public static class Label_componentContext extends Rule_componentContext {
		public Label_elementContext label_element() {
			return getRuleContext(Label_elementContext.class,0);
		}
		public Label_componentContext(Rule_componentContext ctx) { copyFrom(ctx); }
	}

	public final Rule_componentContext rule_component() throws RecognitionException {
		Rule_componentContext _localctx = new Rule_componentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_rule_component);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new Label_componentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				label_element();
				}
				break;
			case 2:
				_localctx = new Atom_componentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				atom();
				}
				break;
			case 3:
				_localctx = new Block_componentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Closure_signContext extends ParserRuleContext {
		public TerminalNode STAR() { return getToken(AuditGenParser.STAR, 0); }
		public TerminalNode PLUS() { return getToken(AuditGenParser.PLUS, 0); }
		public TerminalNode QUESTION() { return getToken(AuditGenParser.QUESTION, 0); }
		public Closure_signContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closure_sign; }
	}

	public final Closure_signContext closure_sign() throws RecognitionException {
		Closure_signContext _localctx = new Closure_signContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_closure_sign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STAR) | (1L << PLUS) | (1L << QUESTION))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_defContext extends ParserRuleContext {
		public TerminalNode POUND() { return getToken(AuditGenParser.POUND, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Label_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_def; }
	}

	public final Label_defContext label_def() throws RecognitionException {
		Label_defContext _localctx = new Label_defContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_label_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(POUND);
			setState(99);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_elementContext extends ParserRuleContext {
		public Label_nameContext label_name() {
			return getRuleContext(Label_nameContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(AuditGenParser.EQUAL, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Label_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_element; }
	}

	public final Label_elementContext label_element() throws RecognitionException {
		Label_elementContext _localctx = new Label_elementContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_label_element);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			label_name();
			setState(102);
			match(EQUAL);
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
			case DQUOTA_STRING:
			case SQUOTA_STRING:
				{
				setState(103);
				atom();
				}
				break;
			case LPAREN:
				{
				setState(104);
				block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Closure_signContext closure_sign() {
			return getRuleContext(Closure_signContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_atom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			identifier();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STAR) | (1L << PLUS) | (1L << QUESTION))) != 0)) {
				{
				setState(108);
				closure_sign();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(AuditGenParser.LPAREN, 0); }
		public List<AlternativeContext> alternative() {
			return getRuleContexts(AlternativeContext.class);
		}
		public AlternativeContext alternative(int i) {
			return getRuleContext(AlternativeContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(AuditGenParser.RPAREN, 0); }
		public List<TerminalNode> BAR() { return getTokens(AuditGenParser.BAR); }
		public TerminalNode BAR(int i) {
			return getToken(AuditGenParser.BAR, i);
		}
		public Closure_signContext closure_sign() {
			return getRuleContext(Closure_signContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(LPAREN);
			setState(112);
			alternative();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BAR) {
				{
				{
				setState(113);
				match(BAR);
				setState(114);
				alternative();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(RPAREN);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STAR) | (1L << PLUS) | (1L << QUESTION))) != 0)) {
				{
				setState(121);
				closure_sign();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}